--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,34 @@
 body {
-  padding: 0 1rem;
+  padding: 0;
   margin: 0;
 }
 
 header {
   display: flex;
   width: 100%;
-  background-color: orange;
-  color: white;
+  background-color: #282A36;
   gap: 1rem;
   padding: 1rem;
+
+  a {
+    color: #50FA7B;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+}
+
+main {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 table {
@@ -22,4 +41,11 @@ td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+}
+
+input,
+button {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
